# bq25180_driver

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  bq25180.c  bq25180.h  bq25180_stm32_adapter.c  bq25180_stm32_adapter.h
.github/workflows/: ci.yml
tests/: test_bq25180.c
